cmake_minimum_required(VERSION 3.0)
project(chp12)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
INCLUDE_DIRECTORIES("./")
#add_executable(ex_12_2 ./ex_12_2.cpp ./StrBlob.hpp)
add_executable(ex_10_1 ./ex_10_1.cpp)
add_executable(ex_10_2 ./ex_10_2.cpp)
add_executable(ex_10_3 ./ex_10_3.cpp)
add_executable(ex_10_6 ./ex_10_6.cpp)
add_executable(ex_10_9 ./ex_10_9.cpp)
add_executable(ex_10_12 ./ex_10_12.cpp)
add_executable(ex_10_14 ./ex_10_14.cpp)
add_executable(ex_10_16 ./ex_10_16.cpp)
