cmake_minimum_required(VERSION 3.0)
project(chp13)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
INCLUDE_DIRECTORIES("./")
add_executable(ex_13_13 ./ex_13_13.cpp)
add_executable(ex_13_17 ./ex_13_17.cpp)
add_executable(ex_13_39 ./ex_13_39.cpp )
add_executable(ex_13_44 ./ex_13_44.cpp )
add_executable(ex_13_48 ./ex_13_48.cpp )
add_executable(ex_13_53 ./ex_13_53.cpp )
