cmake_minimum_required(VERSION 3.0)
project(chp16)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
INCLUDE_DIRECTORIES("./")
add_executable(ex_16_2 ./ex_16_2.cpp)
add_executable(ex_16_4 ./ex_16_4.cpp)
add_executable(ex_16_5 ./ex_16_5.cpp)
add_executable(ex_16_6 ./ex_16_6.cpp)
add_executable(ex_16_7 ./ex_16_7.cpp)
add_executable(ex_16_19 ./ex_16_19.cpp)
add_executable(ex_16_47 ./ex_16_47.cpp)
add_executable(ex_16_48 ./ex_16_48.cpp)
add_executable(ex_16_50 ./ex_16_50.cpp)
add_executable(ex_16_52 ./ex_16_52.cpp)
add_executable(ex_16_53 ./ex_16_53.cpp)
add_executable(ex_16_63 ./ex_16_63.cpp)
