cmake_minimum_required(VERSION 2.6)
project(ex_chp2)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
INCLUDE_DIRECTORIES("./")
add_executable(ex_2_8 ./ex_2_8.cpp)
add_executable(ex_2_34 ./ex_2_34.cpp)
add_executable(ex_2_35 ./ex_2_35.cpp)
add_executable(ex_2_41_151 ./ex_2_41_151.cpp)
add_executable(ex_2_42 ./ex_2_42.cpp )
