cmake_minimum_required(VERSION 3.0)
project(chp3)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
INCLUDE_DIRECTORIES("./")
add_executable(ex_3_1 ./ex_3_1.cpp)
add_executable(ex_3_2 ./ex_3_2.cpp)
add_executable(ex_3_4 ./ex_3_4.cpp)
add_executable(ex_3_5 ./ex_3_5.cpp)
add_executable(ex_3_6 ./ex_3_6.cpp)
add_executable(ex_3_8 ./ex_3_8.cpp)
add_executable(ex_3_10 ./ex_3_10.cpp)
add_executable(ex_3_14 ./ex_3_14.cpp)
add_executable(ex_3_16 ./ex_3_16.cpp)
add_executable(ex_3_17 ./ex_3_17.cpp)
add_executable(ex_3_20 ./ex_3_20.cpp)
