cmake_minimum_required(VERSION 3.0)
project(chp6)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
INCLUDE_DIRECTORIES("./")
add_executable(ex_6_5 ./ex_6_5.cpp)
add_executable(ex_6_6 ./ex_6_6.cpp)
add_executable(ex_6_7 ./ex_6_7.cpp)
add_executable(ex_6_10 ./ex_6_10.cpp)
add_executable(ex_6_11 ./ex_6_11.cpp)
add_executable(ex_6_17 ./ex_6_17.cpp)
add_executable(ex_6_21 ./ex_6_21.cpp)
add_executable(ex_6_22 ./ex_6_22.cpp)
add_executable(ex_6_23 ./ex_6_23.cpp)
add_executable(ex_6_25 ./ex_6_25.cpp)
add_executable(ex_6_26 ./ex_6_26.cpp)
add_executable(ex_6_32 ./ex_6_32.cpp)
#add_definitions(-DNDEBUG)
add_executable(ex_6_33 ./ex_6_33.cpp)
add_executable(ex_6_44 ./ex_6_44.cpp)
add_executable(ex_6_51 ./ex_6_51.cpp)
add_executable(ex_6_55 ./ex_6_55.cpp)
