cmake_minimum_required(VERSION 3.0)
project(chp6)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
INCLUDE_DIRECTORIES("./")
add_executable(ex_7_1 ./ex_7_1.cpp)
add_executable(ex_7_2 ./ex_7_2.cpp)
add_executable(ex_7_6 ./ex_7_6.cpp ./ex_7_6_func.cpp)
add_executable(ex_7_9 ./ex_7_9.cpp )
add_executable(ex_7_11 ./ex_7_11.cpp ./ex_7_6_func.cpp)
add_executable(ex_7_13 ./ex_7_13.cpp ./ex_7_6_func.cpp)
add_executable(ex_7_27 ./ex_7_27.cpp screen.cpp)
add_executable(ex_7_31 ./ex_7_31.cpp)

add_executable(ex_7_32 ./ex_7_32.cpp Window_mgr.cpp screen.cpp )
